man_MANS = \
           AllPlanes.3 \
           BlkPScrn.3 \
           Dis3C.3 \
           ImageOrd.3 \
           IsCKey.3 \
           XACHints.3 \
           XAIcSize.3 \
           XASCmap.3 \
           XASHints.3 \
           XAWMHints.3 \
           XAddHost.3 \
           XAllColor.3 \
           XAllEvnt.3 \
           XAnyEvent.3 \
           XButEvent.3 \
           XCKCntrl.3 \
           XCKMping.3 \
           XCMEvent.3 \
           XCPCntrl.3 \
           XCSSet.3 \
           XCWAttrib.3 \
           XCWEvent.3 \
           XCirEvent.3 \
           XCirREven.3 \
           XClrArea.3 \
           XCmpEvent.3 \
           XConEvent.3 \
           XConREven.3 \
           XConfWin.3 \
           XCopyArea.3 \
           XCreCmap.3 \
           XCreFCur.3 \
           XCreFSet.3 \
           XCreGC.3 \
           XCreIC.3 \
           XCreImage.3 \
           XCreOC.3 \
           XCrePmap.3 \
           XCreReg.3 \
           XCreWin.3 \
           XCroEvent.3 \
           XDWEvent.3 \
           XDefCur.3 \
           XDesWin.3 \
           XDrArc.3 \
           XDrIStr.3 \
           XDrLine.3 \
           XDrPoint.3 \
           XDrRect.3 \
           XDrString.3 \
           XDrText.3 \
           XERegion.3 \
           XEnumDB.3 \
           XEofFSet.3 \
           XErrEvent.3 \
           XExpEvent.3 \
           XFCEvent.3 \
           XFEvent.3 \
           XFSExt.3 \
           XFillRect.3 \
           XFlush.3 \
           XFofFSet.3 \
           XFree.3 \
           XGEEvent.3 \
           XGEvent.3 \
           XGFDBase.3 \
           XGetRes.3 \
           XGetVInfo.3 \
           XGetWAttr.3 \
           XGetWProp.3 \
           XGrButton.3 \
           XGrKey.3 \
           XGrKeybrd.3 \
           XGrPntr.3 \
           XGrServer.3 \
           XIcWin.3 \
           XIfEvent.3 \
           XInitial.3 \
           XInstCmap.3 \
           XIntConn.3 \
           XInterReg.3 \
           XInternA.3 \
           XKMapEven.3 \
           XListFont.3 \
           XLoadFont.3 \
           XLookKsym.3 \
           XMDBases.3 \
           XMEvent.3 \
           XMREvent.3 \
           XMapWin.3 \
           XNEvent.3 \
           XNoOp.3 \
           XOpDsply.3 \
           XOpenIM.3 \
           XOpenOM.3 \
           XPEvent.3 \
           XParGeom.3 \
           XPolyReg.3 \
           XPutBEvnt.3 \
           XPutImage.3 \
           XPutRes.3 \
           XQBSize.3 \
           XQColor.3 \
           XQPointer.3 \
           XQTree.3 \
           XREvent.3 \
           XRMStr.3 \
           XRREvent.3 \
           XRaiseWin.3 \
           XReadBF.3 \
           XRecCur.3 \
           XReparWin.3 \
           XSCEvent.3 \
           XSContext.3 \
           XSEvent.3 \
           XSICFoc.3 \
           XSICVals.3 \
           XSInput.3 \
           XSLTTProp.3 \
           XSREvent.3 \
           XSeArcMod.3 \
           XSeClipO.3 \
           XSeClosDM.3 \
           XSeCmd.3 \
           XSeErrHan.3 \
           XSeEvent.3 \
           XSeFillS.3 \
           XSeFont.3 \
           XSeFontP.3 \
           XSeInFoc.3 \
           XSeLAttr.3 \
           XSePMap.3 \
           XSeScSav.3 \
           XSeSelOwn.3 \
           XSeState.3 \
           XSeTFHint.3 \
           XSeTProp.3 \
           XSeTile.3 \
           XSeWMCMac.3 \
           XSeWMCWin.3 \
           XSeWMINam.3 \
           XSeWMName.3 \
           XSeWMProp.3 \
           XSeWMProt.3 \
           XStBytes.3 \
           XStColors.3 \
           XStTKsym.3 \
           XSupLoc.3 \
           XSync.3 \
           XTLTTProp.3 \
           XTextExt.3 \
           XTextWid.3 \
           XThreads.3 \
           XTranWCo.3 \
           XUQuark.3 \
           XUmapEven.3 \
           XUnmapWin.3 \
           XVCNList.3 \
           XVEvent.3 \
           XWarpPntr.3 \
           Xcms3CoC.3 \
           XcmsAClr.3 \
           XcmsCClrs.3 \
           XcmsClr.3 \
           XcmsCre3C.3 \
           XcmsD3C.3 \
           XcmsLaQMC.3 \
           XcmsLuQMC.3 \
           XcmsQBlk.3 \
           XcmsQClr.3 \
           XcmsSClr.3 \
           XcmsSWP.3 \
           XcmsTQMC.3 \
           XmbDIStr.3 \
           XmbDStr.3 \
           XmbDTxt.3 \
           XmbLStr.3 \
           XmbRIC.3 \
           XmbTEsc.3 \
           XmbTExt.3 \
           XmbTPCEx.3

EXTRA_DIST=$(man_MANS)
